# ak-rpi

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  configure-audio.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.sh  tox.ini
.github/workflows/: main.yml
ak_rpi/: __init__.py  audio.py  client.py  errors.py  main.py  ntp.py  player.py  utils.py
docs/: index.md  modules.md
docs/reference/: audio.md  client.md  errors.md  ntp.md  player.md  utils.md
tests/: test_placeholder.py
